--- a/.github/workflows/Challenge2.yml
+++ b/.github/workflows/Challenge2.yml
@@ -2,6 +2,7 @@ name: Challenge two
 on: push
 env: 
   FILE_NAME: "Hello.txt"
+  FILE_PATH: "."
 jobs:
   apply-artifact:
     runs-on: ubuntu-latest
@@ -13,5 +14,5 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
-          # Artifact name
           name: $FILE_NAME
+          path: $FILE_PATH
