--- a/.github/workflows/Challenge2.yml
+++ b/.github/workflows/Challenge2.yml
@@ -1,8 +1,8 @@
 name: Challenge two
 on: push
 env: 
-  FILE_NAME: "Hello.txt"
-  FILE_PATH: "."
+  FILE_NAME: myartifact
+  FILE_PATH: .
 jobs:
   apply-artifact:
     runs-on: ubuntu-latest
@@ -14,5 +14,5 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
-          name: $FILE_NAME
-          path: $FILE_PATH
+          name: ${{ FILE_NAME }}
+          path: ${{ FILE_PATH }}
