--- a/.github/workflows/Challenge2.yml
+++ b/.github/workflows/Challenge2.yml
@@ -2,7 +2,6 @@ name: Challenge two
 on: push
 env: 
   FILE_NAME: myartifact
-  FILE_PATH: .
 jobs:
   apply-artifact:
     runs-on: ubuntu-latest
@@ -15,4 +14,4 @@ jobs:
         uses: actions/upload-artifact@v3.1.0
         with:
           name: ${{ FILE_NAME }}
-          path: ${{ FILE_PATH }}
+          path: .
