--- a/.github/workflows/Challenge2.yml
+++ b/.github/workflows/Challenge2.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
-          name: ${{ FILE_NAME }}
+          name: ${{ env.FILE_NAME }}
           path: .
